# MLOps-Project-2526

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-api.txt  requirements-monitoring.txt  requirements.txt  stats.json
conf/base/: catalog.yml  feature_metadata.yml  parameters.yml
data/01_raw/: country.csv  covid.csv
data/03_primary/: merged_dataset.parquet
data/04_feature/: engineered_dataset.parquet  feature_store.parquet  validated_dataset.parquet
data/05_reports/: best_model_metrics.csv  country_mismatches.csv  data_dictionary.csv  dataset_summary.json  feature_importance.csv  missing_values.csv  model_metrics.csv  quality_report.json  serving_metrics.csv  shap_values.csv
data/06_models/: best_model.pkl  serving_bundle.json  serving_model.pkl  trained_models.pkl
data/07_model_output/: current_features.parquet  predictions.csv  reference_features.parquet
data/08_reporting/: drift_report.html  drift_report.json  drift_table.csv
great_expectations/: README.md
great_expectations/expectations/: country_quality_suite.json
src/mlops_project/: pipeline_registry.py
src/mlops_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mlops_project/app/: __init__.py  main.py  schemas.py
tests/: conftest.py  test_api.py
tests/pipelines/data_drift/: test_drift.py
tests/pipelines/data_quality/: test_data_quality.py  test_nodes.py
tests/pipelines/feature_engineering/: test_feature_engineering.py
tests/pipelines/ingestion/: test_ingestion.py
tests/pipelines/model_training/: test_training.py
(+35 files in other folders)
